# wpexpect

./: .gitignore  flake.nix  pyproject.toml  treefmt.nix
.github/workflows/: pytest.yml  test.yml
src/wpexpect/: __init__.py
tests/: test_control.py  test_main.py  test_run.py
