[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=4.6.11"]

[project]
name = "wpexpect"
version = "0.1.0"
description = "Cross-platform wrapper for pexpect and wexpect"
readme = "README.md"
requires-python = ">=3.4"
dependencies = ["pexpect>=4.9.0", "wexpect>=4.0.0 ; sys_platform == 'win32'"]
