[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=4.6.11"]

[project]
name = "wpexpect"
version = "0.1.0"
description = "Cross-platform wrapper for pexpect and wexpect"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pexpect>=4.9.0",
  "wexpect ; sys_platform == 'win32'",
  "setuptools >=76.1.0 ; sys_platform == 'win32'"
]

[tool.uv.sources]
wexpect = {git = "https://github.com/Gigahawk/wexpect.git", branch = "personal-dev"}
